SPARK-1287, found error when parsing certain color.settings due to whitespaces somewhere added button to reset all colorsettings to default
polish language updates




git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12263 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -238,6 +238,43 @@
 ##     Added key: 'lookandfeel.color.saved'
 ##     Added key: 'label.time.till.idlemessage'
 ##     Added key: 'message.search.input.short'
+##     Added key: 'menuitem.revoke.member'
+##     Added key: 'menuitem.revoke.admin'
+##     Added key: 'menuitem.revoke.owner'
+##     Added key: 'menuitem.grant.member'
+##     Added key: 'menuitem.grant.admin'
+##     Added key: 'menutiem.grant.owner'
+##     Added key: 'menuitem.affiliation'
+##     Added key: 'privacy.title.preferences'
+##     Added key: 'privacy.title.panel'
+##     Added key: 'privacy.label.iq.desc'
+##     Added key: 'privacy.label.pin.desc'
+##     Added key: 'privacy.label.pout.desc'
+##     Added key: 'privacy.label.msg.desc'
+##     Added key: 'privacy.border.information'
+##     Added key: 'privacy.label.information'
+##     Added key: 'privacy.root.node'
+##     Added key: 'privacy.label.preferences'
+##     Added key: 'pricacy.tooltip.preferences'
+##     Added key: 'privacy.label.list.is.active'
+##     Added key: 'privacy.label.list.is.default'
+##     Added key: 'privacy.border.block'
+##     Added key: 'privacy.pick.one.or.more'
+##     Added key: 'privacy.title.add.picker'
+##     Added key: 'privacy.node.contacts'
+##     Added key: 'privacy.node.groups'
+##     Added key: 'privacy.menu.add.contacts'
+##     Added key: 'privacy.menu.add.groups'
+##     Added key: 'privacy.menu.add.rem.items'
+##     Added key: 'privacy.menu.remove'
+##     Added key: 'privacy.menu.avtivate.list'
+##     Added key: 'privacy.menu.default.list'
+##     Added key: 'privacy.menu.add.list'
+##     Added key: 'privacy.menu.remove.list'
+##     Added key: 'privacy.dialog.add.list'
+##     Added key: 'privacy.dialog.rem.list'
+##     Added key: 'privacy.status.menu.entry'
+##     Added key: 'privacy.name.for.default.list'
 ##
 ##     Polish translation made by Martini26
 
@@ -543,7 +580,11 @@ menuitem.edit.my.profile = Edytuj m\u00f3j profil
 menuitem.edit.status.message = Edytuj opis statusu
 menuitem.enter.login.information = Wprowad\u017a informacje logowania
 menuitem.exit = Wyjd\u017a
+menuitem.affiliation = Przynale\u017cno\u015b\u0107
 menuitem.grant.moderator = Zezw\u00f3l na moderowanie
+menuitem.grant.member = Przydziel uprawnienia cz\u0142onkowskie
+menuitem.grant.admin = Przydziel uprawnienia administratora
+menuitem.grant.owner = Przydziel uprawnienia w\u0142asno\u015bci
 menuitem.grant.voice = Zezw\u00f3l na po\u0142\u0105czenie g\u0142osowe
 menuitem.help = Pomoc
 menuitem.hide = Ukryj
@@ -573,6 +614,9 @@ menuitem.remove.service = Usu\u0144 us\u0142ug\u0119
 menuitem.rename = Zmie\u0144 nazw\u0119
 menuitem.revoke.moderator = Odbierz uprawnienia moderatora
 menuitem.revoke.voice = Odbierz uprawnienia do po\u0142\u0105czenia g\u0142osowego
+menuitem.revoke.member = Odbierz uprawnienia cz\u0142onkowskie
+menuitem.revoke.admin = Odbierz uprawnienia administratora
+menuitem.revoke.owner = Odbierz uprawnienia w\u0142asno\u015bci
 menuitem.save = Zapisz
 menuitem.save.as = Zapisz jako
 menuitem.send.a.file = Wy\u015blij plik
@@ -1019,4 +1063,36 @@ lookandfeel.color.red = Czerwony
 lookandfeel.color.green = Zielony
 lookandfeel.color.blue = Niebieski
 lookandfeel.color.opacity = Nieprzezroczysto\u015b\u0107
-lookandfeel.color.saved = Kolor zapisany#!#
+lookandfeel.color.saved = Kolor zapisany
+
+privacy.title.preferences = W\u0142a\u015bciwo\u015bci prywatno\u015bci Sparka
+privacy.title.panel = Prosz\u0119 u\u017cyj prawego przycisku myszy
+privacy.label.iq.desc = Zapytanie
+privacy.label.pin.desc = Obecno\u015b\u0107
+privacy.label.pout.desc = Nieobecno\u015b\u0107
+privacy.label.msg.desc = Wiadomo\u015bci
+privacy.border.information = Informacje o prywatno\u015bci
+privacy.label.information = U\u017cyj prawego przycisku myszy i menu aby doda\u0107 lub usun\u0105\u0107 listy albo przedmioty 
+privacy.root.node = Listy prywatno\u015bci
+privacy.label.preferences = Wytczka prywatno\u015bci
+pricacy.tooltip.preferences = Ustawienia prywatno\u015bci Sparka
+privacy.label.list.is.active = AKTYWNA
+privacy.label.list.is.default = DOMY\u015aLNA
+privacy.border.block = Zablokuj
+privacy.pick.one.or.more = Wybierz jeden lub wi\u0119cej przedmiot\u00f3w aby doda\u0107 do listy
+privacy.title.add.picker = Dodaj przedmioty do listy
+privacy.node.contacts = Kontakty
+privacy.node.groups = Grupy
+privacy.menu.add.contacts = Dodaj kontakty do listy
+privacy.menu.add.groups = Dodaj grupy do listy
+privacy.menu.add.rem.items = Usu\u0144 {0} przedmiot\u00f3w z listy
+privacy.menu.remove = Usu\u0144
+privacy.menu.avtivate.list = Aktywuj
+privacy.menu.default.list = Ustaw jako domy\u015blne
+privacy.menu.add.list = Dodaj list\u0119
+privacy.menu.remove.list = Usu\u0144 list\u0119
+privacy.dialog.add.list = Wpisz nazw\u0119 listy
+privacy.dialog.rem.list = Czy na pewno chcesz usun\u0105\u0107 {0}?
+privacy.status.menu.entry = Listy prywatno\u015bci
+privacy.name.for.default.list = Domy\u015blna
+#!#
