formatting code, fixing grammar mistakes
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12274 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -1034,7 +1034,7 @@ privacy.menu.default.list = Set as default
 privacy.menu.add.list = Add list
 privacy.menu.remove.list = Remove list
 privacy.dialog.add.list = Please enter list name
-privacy.dialog.rem.list = Do you realy want to remove {0}?
+privacy.dialog.rem.list = Do you really want to remove {0}?
 privacy.status.menu.entry = Privacy Lists
 privacy.name.for.default.list = Default
 
