fixed typo in german locale
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12294 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -745,7 +745,7 @@ menuitem.add.groupchat.showrolesinsteadofstatus = Zeige Chatrecht-Icons anstelle
 menuitem.show.offline.users = Zeige Offline User
 menuitem.expand.all.groups = ÷ffne alle Gruppen
 menuitem.collapse.all.groups = Schlieﬂe alle Gruppen
-menuitem.always.on.top = Immer im Vodergrund
+menuitem.always.on.top = Immer im Vordergrund
 menuitem.bookmark.room = Raum als Lesezeichen setzen
 menuitem.refresh = Aktualisieren
 menuitem.create.room = Raum erstellen oder beitreten
