--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -498,6 +498,7 @@ menuitem.add.groupchat.mytext = &Highlight my text when I say something
 menuitem.add.groupchat.popname = Show &toast popup when someone says my name
 menuitem.add.groupchat.showjoinleavemessage = &Show join and leave messages
 menuitem.add.groupchat.showrolesinsteadofstatus = Show chat role icons instead of presence icons
+menuitem.add.groupchat.auto.accept.invite = &Automatically accept groupchat invites
 menuitem.always.on.top = Always on top
 menuitem.alert.when.online = Alert when user is available
 menuitem.ban = Ban
