--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -742,6 +742,7 @@ menuitem.add.groupchat.mytext = Meinen &Text hervorheben, wenn ich etwas schreib
 menuitem.add.groupchat.popname = &Zeige ein Popup, wenn jemand meinen Namen schreibt
 menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den Raum betritt oder verl‰sst 
 menuitem.add.groupchat.showrolesinsteadofstatus = Zeige Chatrecht-Icons anstelle von Statusicons
+menuitem.add.groupchat.auto.accept.invite = Konferenzeinladungen &automatisch aktzeptieren
 menuitem.show.offline.users = Zeige Offline User
 menuitem.expand.all.groups = ÷ffne alle Gruppen
 menuitem.collapse.all.groups = Schlieﬂe alle Gruppen
