polish language updates
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12307 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -275,6 +275,7 @@
 ##     Added key: 'privacy.dialog.rem.list'
 ##     Added key: 'privacy.status.menu.entry'
 ##     Added key: 'privacy.name.for.default.list'
+##     Added key: 'menuitem.add.groupchat.auto.accept.invite'
 ##
 ##     Polish translation made by Martini26
 
@@ -558,6 +559,7 @@ menuitem.add.groupchat.mytext = Pod\u015bwietlaj moje wypowiedzi
 menuitem.add.groupchat.popname = Pokazuj wyskakuj\u0105ce okienko kiedy kto\u015b napisze moj\u0105 nazw\u0119 u\u017cytkownika
 menuitem.add.groupchat.showjoinleavemessage = Wy\u015bwietlaj wiadomo\u015bci o do\u0142\u0105czeniu i opuszczeniu u\u017cytkownik\u00f3w
 menuitem.add.groupchat.showrolesinsteadofstatus = Pokazuj ikony r\u00f3l zamiast ikon statusu
+menuitem.add.groupchat.auto.accept.invite = Automatycznie akceptuj zaproszenia do rozm\u00f3w grupowych 
 menuitem.always.on.top = Zawsze na wierzchu
 menuitem.alert.when.online = Powiadom o dost\u0119pno\u015bci u\u017cytkownika
 menuitem.ban = Zablokuj
@@ -1074,7 +1076,7 @@ privacy.label.msg.desc = Wiadomo\u015bci
 privacy.border.information = Informacje o prywatno\u015bci
 privacy.label.information = U\u017cyj prawego przycisku myszy i menu aby doda\u0107 lub usun\u0105\u0107 listy albo przedmioty 
 privacy.root.node = Listy prywatno\u015bci
-privacy.label.preferences = Wytczka prywatno\u015bci
+privacy.label.preferences = Wtyczka prywatno\u015bci
 pricacy.tooltip.preferences = Ustawienia prywatno\u015bci Sparka
 privacy.label.list.is.active = AKTYWNA
 privacy.label.list.is.default = DOMY\u015aLNA
@@ -1095,4 +1097,3 @@ privacy.dialog.add.list = Wpisz nazw\u0119 listy
 privacy.dialog.rem.list = Czy na pewno chcesz usun\u0105\u0107 {0}?
 privacy.status.menu.entry = Listy prywatno\u015bci
 privacy.name.for.default.list = Domy\u015blna
-#!#
