SPARK-533, BuzzPlugin uses XEP-0224 compliance
for backwards compatibilty it will also send 
<buzz xmlns="http://www.jivesoftware.com/spark"/>

this will be removed in later versions!!!


new locale string: 
message.buzz.message = {0} wants your attention

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12314 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -529,6 +529,7 @@ message.specify.group = Bitte die Gruppe angeben der der neue Kontakt hinzugefüg
 message.room.creation.error = Der Raum kann nicht erstellt werden.
 message.unable.to.retrieve.last.activity = Keine letzte Aktivität für {0} vorhanden
 message.buzz.alert.notification = Sich beim Benutzer bemerkbar machen.
+message.buzz.message = {0} möchte deine Aufmerksamkeit
 message.buzz.sent = 'Buzzer' Benachrichtigung an Benutzer gesendet.
 message.invite.to.groupchat = Sie wurden von {0} zu einem Gruppen-Chat eingeladen
 title.advanced.connection.preferences = Erweiterte Verbindungseinstellungen
