--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -617,6 +617,7 @@ message.broadcast.message.sent = The broadcast message has been sent
 message.broadcast.to = Enter message to broadcast to {0}
 message.broadcasted.to = The message has been broadcasted to the following users\:\n{0}
 message.buzz.alert.notification = Get the user's attention
+message.buzz.message = {0} wants your attention
 message.buzz.sent = Sent alert notification to user
 message.calling = Calling {0}
 message.came.online = {0} is online at {1}
