SPARK-1103 - option to register with room SPARK-1306 - fixed rendering issue with the "X"-button
reworked user.kicked and user.banned listener

changed locale string:
message.user.kicked.from.room = {0} has been kicked out of the room by {1}. Reason: {2}
-> {0}=username,{1}=adminname,{2}=reason

message.user.banned = {0} has been banned from this room. Reason: {1}
-> {0}=username,{1}=reason

new locale:
message.groupchat.registered.member = Successfully registered with {0}
->{0}=roomname

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12324 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -785,7 +785,7 @@ message.unable.to.send.file = You were unable to send the file to {0}
 message.unrecoverable.error = Invalid username or password
 message.update.room.list = Update room list
 message.updating.cancelled = Updating has been canceled
-message.user.banned = {0} has been banned from this room
+message.user.banned = {0} has been banned from this room. Reason: {1}
 message.user.given.voice = {0} has been given a voice in this room
 message.user.granted.admin = {0} has been granted administrator privileges
 message.user.granted.membership = {0} has been given membership privileges
@@ -793,7 +793,7 @@ message.user.granted.moderator = {0} has been granted moderator privileges
 message.user.granted.owner = {0} has been granted owner privileges
 message.user.is.sending.you.a.file = {0} is sending you a file
 message.user.joined.room = {0} has joined the room
-message.user.kicked.from.room = {0} has been kicked out of the room
+message.user.kicked.from.room = {0} has been kicked out of the room by {1}. Reason: {2}
 message.user.left.room = {0} has left the room
 message.user.nickname.changed = {0} is now known as {1}
 message.user.now.available.to.chat = {0} is online at {1}
@@ -825,6 +825,7 @@ message.your.revoked.granted = Your admin privileges have been revoked
 message.your.voice.granted = You have been given a voice in this chat
 message.your.voice.revoked = Your voice has been revoked
 message.groupchat.require.password = This group chat room requires a password to enter
+message.groupchat.registered.member = Successfully registered with {0}
 message.search.for.history = Search conversation history
 
 status.away = Away
