--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -425,10 +425,10 @@ message.subject.change.error = Sie haben keine Rechte das Konferenzthema in dies
 message.forbidden.error = Sie haben nicht die Rechte für diese Aktion.
 message.room.destroyed = Dieser Raum wurde aus dem folgenden Grund gelöscht: {0}
 message.subject.has.been.changed.to = Das Thema der Konferenz wurde von {1} in "{0}" geändert.
-message.user.kicked.from.room = {0} wurde aus dem Raum ausgeladen.
+message.user.kicked.from.room = {0} wurde von {1} aus dem Raum geworfen. Grund: {2}
 message.user.given.voice = {0} hat jetzt Schreibenrechte.
 message.user.voice.revoked = Schreibrechte wurde {0} entzogen.
-message.user.banned = {0} ist für diesen Raum gesperrt.
+message.user.banned = {0} wurde für diesen Raum gesperrt. Grund: {2}
 message.user.granted.membership = {0} ist jetzt Mitglied.
 message.user.revoked.membership = Mitgliedschaft für {0} wurde widerufen.
 message.user.granted.moderator = {0} ist jetzt Moderator.
@@ -682,7 +682,7 @@ menuitem.send.a.message = Nachricht senden...
 menuitem.show.empty.groups = Leere Gruppen anzeigen
 menuitem.send.a.file = Datei senden
 menuitem.view.last.activity = Letzte Aktivität sehen
-menuitem.unban = Verbannung rückgängig machen
+menuitem.unban = Teilnehmer entsperren
 menuitem.ban = Verbannen
 menuitem.browse.service = Services anzeigen
 menuitem.remove.service = Service entfernen
@@ -862,6 +862,7 @@ message.unrecoverable.error = Ungültiger Benutzername oder Passwort
 message.waiting.for.user.to.join = Warte auf {0} zum Beitritt
 message.your.voice.granted = Du hast Schreibrechte in diesem Chat bekommen
 message.groupchat.require.password = Dieser GruppenChat benötigt ein Passwort
+message.groupchat.registered.member = Registrierung mit {0} erfolgreich
 message.search.for.history = Durchsuche Gesprächsverlauf
 status.extended.away = Nicht verfügbar
 status.free.to.chat = Bereit zu chatten
