SPARK-1320 corrected i18n files. thanks to wroot.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12331 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -1015,7 +1015,7 @@ privacy.title.panel = Please use right mouse button
 privacy.label.iq.desc = Query
 privacy.label.pin.desc = Presence in
 privacy.label.pout.desc = Presence out
-privacy.label.msg.desc Messages
+privacy.label.msg.desc = Messages
 privacy.border.information = Privacy Information
 privacy.label.information = Use right click menu to add or delete lists or items 
 privacy.root.node = Privacy Lists
@@ -1024,7 +1024,7 @@ pricacy.tooltip.preferences = Spark privacy settings
 privacy.label.list.is.active = ACTIVE
 privacy.label.list.is.default = DEFAULT
 privacy.border.block = Block
-privacy.pick.one.or.more = Pick on or more items to add to the list
+privacy.pick.one.or.more = Pick one or more items to add to the list
 privacy.title.add.picker = Add Items to List
 privacy.node.contacts = Contacts
 privacy.node.groups = Groups
