--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -906,7 +906,7 @@ privacy.title.panel = Benutzen Sie die rechte Maustaste
 privacy.label.iq.desc = Abfragen
 privacy.label.pin.desc = Anwesenheit empfangen
 privacy.label.pout.desc = Anwesenheit senden
-privacy.label.msg.desc Nachrichten
+privacy.label.msg.desc = Nachrichten
 privacy.border.information = Legende
 privacy.label.information = Benutzen Sie die rechte Maustaste um Elemente hinzuzufügen oder zu entfernen
 privacy.root.node = Privatsphärelisten
