updating language files for release
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12334 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -618,7 +618,7 @@ message.broadcast.to = Enter message to broadcast to {0}
 message.broadcasted.to = The message has been broadcasted to the following users\:\n{0}
 message.buzz.alert.notification = Get the user's attention
 message.buzz.message = {0} wants your attention
-message.buzz.sent = Sent alert notification to user
+message.buzz.sent = Requested users attention
 message.calling = Calling {0}
 message.came.online = {0} is online at {1}
 message.cannot.add.contact.to.shared.group = You cannot add new contacts to a shared group
