--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -431,6 +431,7 @@ label.state.and.province = &Valstija/Rajonas
 label.street.address = &Pa\u0161to adresas
 label.time = Laikas: {0}
 label.time.till.idle = Neveikos laikas &iki abonentas dar laikomas aktyviu (min.)
+label.time.till.idlemessage = Pasitrauk\u0119s nuo kompiuterio
 label.timeformat = Laiko formatas {0}
 label.transfer.download.directory = &Parsiuntimo vieta:
 label.transfer.timeout = &Kiek laukti siuntimo patvirtinimo (min.):
@@ -470,7 +471,8 @@ menuitem.add.groupchat.mytext = I\u0161ry\u0161kinti mano tekst\u0105, kai k\u01
 menuitem.add.groupchat.popname = Parodyti i\u0161\u0161okant\u012f prane\u0161im\u0105, kai kas nors mane pamini
 menuitem.add.groupchat.showjoinleavemessage = Rodyti informacij\u0105 apie prisijungim\u0105 ir atsijungim\u0105
 menuitem.add.groupchat.showrolesinsteadofstatus = Rodyti pokalbio roles vietoje b\u016bsenos ikon\u0173
-menuitem.always.on.top = Visados vir\u0161uje
+menuitem.add.groupchat.auto.accept.invite = &Automati\u0161kai priimti grupinio pokalbio kvietimus
+menuitem.always.on.top = Visada vir\u0161uje
 menuitem.alert.when.online = Informuoti, kai abonentas taps pasiekiamas
 menuitem.ban = U\u017edrausti
 menuitem.ban.user = U\u017edrausti abonent\u0105
@@ -492,8 +494,12 @@ menuitem.edit.my.profile = &Redaguoti mano profil\u012f\u2026
 menuitem.edit.status.message = Redaguoti b\u016bsen\u0173 vardus\u2026
 menuitem.enter.login.information = Prisijungimo informacijos \u012fvedimas
 menuitem.exit = I\u0161jungti
-menuitem.grant.moderator = Pri\u017ei\u016br\u0117tojo paskyrimas
-menuitem.grant.voice = Balso priskyrimas
+menuitem.affiliation = Teisi\u0173 priskyrimas
+menuitem.grant.moderator = Paskirti pri\u017ei\u016br\u0117toju
+menuitem.grant.member = Suteikti naryst\u0119
+menuitem.grant.admin = Paskirti administratoriumi
+menutiem.grant.owner = Paskirti savininku
+menuitem.grant.voice = Suteikti balso teis\u0119
 menuitem.help = \u017dinynas
 menuitem.hide = Sl\u0117pti
 menuitem.invite.group.to.conference = Pakviesti grup\u0119 \u012f konferencij\u0105
@@ -522,6 +528,9 @@ menuitem.remove.service = Tarnybos pa\u0161alinimas
 menuitem.rename = Keisti vard\u0105
 menuitem.revoke.moderator = At\u0161aukti pri\u017ei\u016br\u0117toj\u0105
 menuitem.revoke.voice = Atimti bals\u0105
+menuitem.revoke.member = At\u0161aukti naryst\u0119
+menuitem.revoke.admin = At\u0161aukti administratori\u0173
+menuitem.revoke.owner = At\u0161aukti savininko privilegij\u0105
 menuitem.save = \u012era\u0161yti
 menuitem.save.as = \u012era\u0161yti vardu\u2026
 menuitem.send.a.file = Si\u0173sti fail\u0105
@@ -580,6 +589,7 @@ message.broadcast.message.sent = Transliuota \u017einia jau i\u0161si\u0173sta
 message.broadcast.to = \u012eveskite k\u0105 transliuosite gav\u0117jams {0}
 message.broadcasted.to = Transliavote \u0161iems abonentams:\n {0}
 message.buzz.alert.notification = Atkreipti d\u0117mes\u012f
+message.buzz.message = {0} nori j\u016bs\u0173 d\u0117mesio
 message.buzz.sent = Nusi\u0173sti abonentui i\u0161kvietim\u0105
 message.calling = Skambinama {0}
 message.came.online = {0} prisijung\u0119s prie {1}
@@ -786,6 +796,7 @@ message.your.revoked.granted = Netekote administratoriaus privilegij\u0173.
 message.your.voice.granted = \u0160iame pokalbyje Jums suteiktas balsas.
 message.your.voice.revoked = Netekote balso.
 message.groupchat.require.password = \u0160i pokalbi\u0173 grup\u0117 priims, jei \u012fvesite slapta\u017eod\u012f.
+message.groupchat.registered.member = S\u0117kmingai prisiregistravote prie {0}
 message.search.for.history = Ie\u0161koti pokalbio \u017eurnale
 
 status.away = Pasitrauk\u0119s
@@ -961,5 +972,45 @@ lookandfeel.select = Pasirinkti programos i\u0161vaizd\u0105
 lookandfeel.change.now = Pakeisti dabar
 lookandfeel.tooltip.restart.no = Programos perkrovimas nereikalingas
 lookandfeel.tooltip.restart.yes = Kad \u012fjungti programos sistemin\u0119 i\u0161vaizd\u0105, paspauskite \u012era\u0161yti ir perkraukite Spark
+lookandfeel.color.label = Spalvos
+lookandfeel.color.red = Raudona
+lookandfeel.color.green = \u017D
+lookandfeel.color.blue = M\u0117lyna
+lookandfeel.color.opacity = Nepermatomumas
+lookandfeel.color.saved = Spalva i\u0161saugota
+
+
+##Settings for the privacy plugin
+privacy.title.preferences = Sparko privatumo nustatymai
+privacy.title.panel = Pra\u0161ome naudoti de\u0161in\u012f pel\u0117s mygtuk\u0105
+privacy.label.iq.desc = U\u017eklausa
+privacy.label.pin.desc = \u012eeinanti b\u016bsena 
+privacy.label.pout.desc = I\u0161einanti b\u016bsena
+privacy.label.msg.desc = \u017Dinut\u0117s
+privacy.border.information = Privatumo informacija
+privacy.label.information = Naudokite de\u0161inio paspaudimo meni\u0173, kad prid\u0117ti ar i\u0161trinti s\u0105ra\u0161us ar punktus 
+privacy.root.node = Privatumo s\u0105ra\u0161ai
+privacy.label.preferences = Privatumo \u012fskiepis
+pricacy.tooltip.preferences = Sparko privatumo nustatymai
+privacy.label.list.is.active = AKTIVUS
+privacy.label.list.is.default = NUMATYTASIS
+privacy.border.block = Blokuoti
+privacy.pick.one.or.more = Pasirinkite vien\u0105 ar daugiau punkt\u0173, kad prid\u0117ti \u012f s\u0105ra\u0161\u0105
+privacy.title.add.picker = Prid\u0117ti punktus \u012f s\u0105ra\u0161\u0105
+privacy.node.contacts = Adresatai
+privacy.node.groups = Grup\u0117s
+privacy.menu.add.contacts = Prid\u0117ti adresat\u0105 \u012f s\u0105ra\u0161\u0105
+privacy.menu.add.groups = Prid\u0117ti grup\u0119 \u012f s\u0105ra\u0161\u0105
+privacy.menu.add.rem.items = I\u0161trinti {0} punktus i\u0161 s\u0105ra\u0161o
+privacy.menu.remove = I\u0161trinti
+privacy.menu.avtivate.list = Aktyvuoti
+privacy.menu.default.list = Nustatyti kaip numatyt\u0105j\u012f
+privacy.menu.add.list = Prid\u0117ti s\u0105ra\u0161\u0105
+privacy.menu.remove.list = I\u0161trinti s\u0105ra\u0161\u0105
+privacy.dialog.add.list = Pra\u0161me nurodyti s\u0105ra\u0161o vard\u0105
+privacy.dialog.rem.list = Ar tikrai norite i\u0161trinti {0}?
+privacy.status.menu.entry = Privatumo s\u0105ra\u0161ai
+privacy.name.for.default.list = Numatytasis
+
 
 #!#
