--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -276,6 +276,7 @@
 ##     Added key: 'privacy.status.menu.entry'
 ##     Added key: 'privacy.name.for.default.list'
 ##     Added key: 'menuitem.add.groupchat.auto.accept.invite'
+##     Added key: 'message.buzz.message'
 ##
 ##     Polish translation made by Martini26
 
@@ -678,6 +679,7 @@ message.broadcast.message.sent = Wiadomo\u015b\u0107 grupowa zosta\u0142a wys\u0
 message.broadcast.to = Wpisz wiadomo\u015b\u0107 i wy\u015blij do {0}
 message.broadcasted.to = Wiadomo\u015b\u0107 zosta\u0142a wys\u0142ana do nast\u0119puj\u0105cych u\u017cytkownik\u00f3w\:\n{0}
 message.buzz.alert.notification = Zwr\u00f3\u0107 uwag\u0119 u\u017cytkownika
+message.buzz.message = {0} chce zwr\u00f3ci\u0107 Twoj\u0105 uwag\u0119 
 message.buzz.sent = Wy\u015blij alert do u\u017cytkownika
 message.calling = Dzwoni do {0}
 message.came.online = {0} pojawi\u0142 si\u0119 o {1}
