--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -530,7 +530,7 @@ message.room.creation.error = Der Raum kann nicht erstellt werden.
 message.unable.to.retrieve.last.activity = Keine letzte Aktivität für {0} vorhanden
 message.buzz.alert.notification = Sich beim Benutzer bemerkbar machen.
 message.buzz.message = {0} möchte deine Aufmerksamkeit
-message.buzz.sent = 'Buzzer' Benachrichtigung an Benutzer gesendet.
+message.buzz.sent = Benutzer wurde um Aufmerksamkeit gebeten.
 message.invite.to.groupchat = Sie wurden von {0} zu einem Gruppen-Chat eingeladen
 title.advanced.connection.preferences = Erweiterte Verbindungseinstellungen
 title.passwords.no.match = Passwörter stimmen nicht überein. Bitte Eingabe wiederholen.
