--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -277,6 +277,7 @@
 ##     Added key: 'privacy.name.for.default.list'
 ##     Added key: 'menuitem.add.groupchat.auto.accept.invite'
 ##     Added key: 'message.buzz.message'
+##     Added key: 'message.groupchat.registered.member'
 ##
 ##     Polish translation made by Martini26
 
@@ -847,7 +848,7 @@ message.unable.to.send.file = Nie uda\u0142o si\u0119 wys\u0142a\u0107 pliku do 
 message.unrecoverable.error = Niepoprawna nazwa u\u017cytkownika lub has\u0142o
 message.update.room.list = Uaktualnij list\u0119 pokoi
 message.updating.cancelled = Aktualizacja zosta\u0142a anulowana
-message.user.banned = {0} zosta\u0142 zablokowany w tym pokoju
+message.user.banned = {0} zosta\u0142 zablokowany w tym pokoju. Pow\u00f3d: {1}
 message.user.given.voice = {0} otrzyma\u0142 mo\u017cliwo\u015b\u0107 rozmowy g\u0142osowej w tym pokoju
 message.user.granted.admin = {0} otrzyma\u0142 uprawnienia administracyjne
 message.user.granted.membership = {0} otrzyma\u0142 uprawnienia cz\u0142onkowskie
@@ -855,7 +856,7 @@ message.user.granted.moderator = {0} otrzyma\u0142 uprawnienia moderatora
 message.user.granted.owner = {0} otrzyma\u0142 uprawnienia w\u0142a\u015bciciela
 message.user.is.sending.you.a.file = {0} wysy\u0142a do Ciebie plik
 message.user.joined.room = {0} do\u0142\u0105czy\u0142 do pokoju
-message.user.kicked.from.room = {0} zosta\u0142 usuni\u0119ty z pokoju
+message.user.kicked.from.room = {0} zosta\u0142 usuni\u0119ty z pokoju przez {1}. Pow\u00f3d: {2}
 message.user.left.room = {0} opu\u015bci\u0142 pok\u00f3j
 message.user.nickname.changed = {0} jest znany jako {1}
 message.user.now.available.to.chat = {0} jest dost\u0119pny od {1}
@@ -887,6 +888,7 @@ message.your.revoked.granted = Twoje uprawnienia administracyjne zosta\u0142y an
 message.your.voice.granted = Otrzyma\u0142e\u015b mo\u017cliwo\u015b\u0107 rozmowy g\u0142osowej w tej rozmowie
 message.your.voice.revoked = Anulowano twoje uprawnienia do rozmowy g\u0142osowej
 message.groupchat.require.password = Aby wej\u015b\u0107 do tego pokoju wymagane jest has\u0142o
+message.groupchat.registered.member = Pomy\u015blnie zarejestrowany w {0}
 message.search.for.history = Przeszukaj histori\u0119 rozmowy
 
 status.away = Zaraz wracam
