SPARK-791 added refresh button to user information to manually force a reload. spark checks for vcard changes on startup.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12346 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -248,6 +248,7 @@ reject = Reject
 retry = Retry
 room.name = Room Name
 save = Save
+refresh = Refresh
 subject = Subject
 unfiled = Unfiled
 use.default = Use Default
