--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -148,6 +148,7 @@ retry = Wiederholen
 active = Aktiv
 not.registered = Nicht registriert
 save = Speichern
+refresh = Aktualisieren
 yes = Ja
 no = Nein
 broadcast = Rundnachricht
