--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -866,6 +866,7 @@ title.add.search.service = Add search service
 title.add.to.roster = Add to roster
 title.address = Address
 title.advanced.connection.usesso = Use Single Sign-On (SSO) via GSSAPI
+title.advanced.connection.sso.account = This will use the Desktop Account for "{0}" to login to the server.
 title.alert = Alert
 title.appearance = Appearance
 title.appearance.preferences = Customization
