--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -542,6 +542,7 @@ title.account.create.registration = Account Registrieren
 title.register.account = Neuen Account registrieren
 title.notification = Benachrichtigungen
 title.advanced.connection.usesso = Verwende Single Sign-ON (SSO) über GSSAPI
+title.advanced.connection.sso.account = Den Desktopaccount "{0}" benutzen um mit dem Server zu verbinden.
 title.preferences = Einstellungen
 title.error = Fehler
 title.client.logs = Client Logs
