--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -212,7 +212,7 @@ no = Ne
 not.registered = Neregistruota
 occupants = Lankytoj\u0173 sk.:
 offline = Atsijung\u0117
-ok = Transliuoti
+ok = Gerai
 online = Prisijung\u0117
 open = Atverti
 open.folder = Atverti aplank\u0105
@@ -461,7 +461,7 @@ label.video.device = &Vaizdo \u012frenginys
 
 menuitem.about = Apie
 menuitem.actions = Veiksmai
-menuitem.bookmarks = \u017dymos
+menuitem.bookmarks = \u017dym\u0117s
 menuitem.add = Prid\u0117ti
 menuitem.add.as.contact = Prid\u0117ti kaip adresat\u0105
 menuitem.add.contact = Prid\u0117ti adresat\u0105
@@ -974,7 +974,7 @@ lookandfeel.tooltip.restart.no = Programos perkrovimas nereikalingas
 lookandfeel.tooltip.restart.yes = Kad \u012fjungti programos sistemin\u0119 i\u0161vaizd\u0105, paspauskite \u012era\u0161yti ir perkraukite Spark
 lookandfeel.color.label = Spalvos
 lookandfeel.color.red = Raudona
-lookandfeel.color.green = \u017D
+lookandfeel.color.green = \u017Dalia
 lookandfeel.color.blue = M\u0117lyna
 lookandfeel.color.opacity = Nepermatomumas
 lookandfeel.color.saved = Spalva i\u0161saugota
