SPARK-1333, updated lithuanian language and spellchecker
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12387 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_lt.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_lt.properties
@@ -3,5 +3,6 @@ title.spellchecker = Ra\u0161ybos tikrinimas
 preference.spellcheckingEnabled = \u012ejungti ra\u0161ybos tikrinim\u0105
 preference.autoSpellcheckingEnabled = \u012ejungti automatin\u012f ra\u0161ybos tikrinim\u0105
 preference.language = &Kalba
+preference.ignore.uppercasedword = &Neskirti did\u017ei\u0173j\u0173 ir ma\u017e\u0173j\u0173 raid\u017ei\u0173
 button.check.spelling = Patikrint ra\u0161b\u0105
 
