--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -826,7 +826,6 @@ title.password.required = Reikalingas slapta\u017eodis
 title.task.notification = Prane\u0161imas apie u\u017eduot\u012f
 title.client.logs = \u017durnalo \u012fra\u0161ai
 title.advanced.connection.preferences = Prisijungimo nuostatos i\u0161samiau
-title.advanced.connection.usesso = &Naudoti \u201eSingle Sign-On (SSO) via GSSAPI\u201c
 title.account.create.registration = Paskyros registravimas
 title.bookmarks = \u017dymos
 title.account.created = Paskyra s\u0117kmingai sukurta
@@ -836,6 +835,8 @@ title.add.new.group = Naujos grup\u0117s prid\u0117jimas
 title.add.search.service = Paie\u0161kos tarnybos prid\u0117jimas
 title.add.to.roster = \u012etraukti \u012f s\u0105ra\u0161\u0105
 title.address = Adresas
+title.advanced.connection.usesso = Naudoti Single Sign-On (SSO) via GSSAPI
+title.advanced.connection.sso.account = Prisijungimui prie serverio bus panaudota vartotojo paskyra "{0}"
 title.alert = Prane\u0161imas
 title.appearance = I\u0161vaizda
 title.appearance.preferences = Adaptavimas
