updating polish translation
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12395 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -278,6 +278,8 @@
 ##     Added key: 'menuitem.add.groupchat.auto.accept.invite'
 ##     Added key: 'message.buzz.message'
 ##     Added key: 'message.groupchat.registered.member'
+##     Added key: 'refresh'
+##     Added key: 'title.advanced.connection.sso.account'
 ##
 ##     Polish translation made by Martini26
 
@@ -311,6 +313,7 @@ reject = Odrzu\u0107
 retry = Powt\u00f3rz
 room.name = Nazwa pokoju
 save = Zapisz
+refresh = Od\u015bwie\u017c
 subject = Temat
 unfiled = Niewype\u0142nione
 use.default = U\u017cyj domy\u015blnych
@@ -928,6 +931,7 @@ title.add.search.service = Dodaj us\u0142ug\u0119 wyszukiwania
 title.add.to.roster = Dodaj do listy
 title.address = Adres
 title.advanced.connection.usesso = U\u017cyj metody Single Sign-On (SSO) via GSSAPI
+title.advanced.connection.sso.account = To u\u017cyje konta logowania do pulpitu dla "{0}" aby zalogowa\u0107 do serwera.
 title.alert = Alert
 title.appearance = Wygl\u0105d
 title.appearance.preferences = Dostosuj
