SPARK-1316 refractory privacyplugin. added privacyplugin showing ghost icon next to contact that is currently affected by active list. added ability do disable default and active list
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12396 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -1023,8 +1023,8 @@ privacy.label.information = Use right click menu to add or delete lists or items
 privacy.root.node = Privacy Lists
 privacy.label.preferences = Privacy Plugin
 pricacy.tooltip.preferences = Spark privacy settings
-privacy.label.list.is.active = ACTIVE
-privacy.label.list.is.default = DEFAULT
+privacy.label.list.is.active = Current active list:
+privacy.label.list.is.default = Default list:
 privacy.border.block = Block
 privacy.pick.one.or.more = Pick one or more items to add to the list
 privacy.title.add.picker = Add Items to List
@@ -1042,5 +1042,6 @@ privacy.dialog.add.list = Please enter list name
 privacy.dialog.rem.list = Do you really want to remove {0}?
 privacy.status.menu.entry = Privacy Lists
 privacy.name.for.default.list = Default
-
+privacy.button.no.list.selected = No list selected
+privacy.menuitem.deactivate.current.list = Deactivate {0}
 #!#
