--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -914,8 +914,8 @@ privacy.label.information = Benutzen Sie die rechte Maustaste um Elemente hinzuz
 privacy.root.node = Privatsphärelisten
 privacy.label.preferences = Privatsphäre
 pricacy.tooltip.preferences = Spark Privatsphäreeinstellungen
-privacy.label.list.is.active = AKTIV
-privacy.label.list.is.default = STANDARD
+privacy.label.list.is.active = Aktuell aktive Liste:
+privacy.label.list.is.default = Standardliste:
 privacy.border.block = Sperren
 privacy.pick.one.or.more = Wähle ein oder mehrere Elemente aus der Liste
 privacy.title.add.picker = Elemente zur Liste hinzufügen
@@ -933,7 +933,7 @@ privacy.dialog.add.list = Bitte den Namen der Liste eingeben
 privacy.dialog.rem.list = Möchten Sie wirklich "{0}" entfernen?
 privacy.status.menu.entry = Privatsphäre
 privacy.name.for.default.list = Standard
-
-
+privacy.button.no.list.selected = Keine list ausgewählt
+privacy.menuitem.deactivate.current.list = {0} deaktivieren
 
 #!#
