SPARK-1332 SPARK-LANG
title.advanced.connection.sso = Using Single Sign-On (SSO)
title.advanced.connection.sso.unable = Unable to connect using Single Sign-On. Please check your principal and server settings.

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12402 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -541,8 +541,10 @@ title.create.new.account = Neuen Account erstellen
 title.account.create.registration = Account Registrieren
 title.register.account = Neuen Account registrieren
 title.notification = Benachrichtigungen
-title.advanced.connection.usesso = Verwende Single Sign-ON (SSO) über GSSAPI
+title.advanced.connection.sso = Verwende Single Sign-On (SSO)
+title.advanced.connection.usesso = Verwende Single Sign-On (SSO) über GSSAPI
 title.advanced.connection.sso.account = Den Desktopaccount "{0}" benutzen um mit dem Server zu verbinden.
+title.advanced.connection.sso.unable = Single Sign-On fehlgeschlagen. Bitte die Einstellungen überprüfen.
 title.preferences = Einstellungen
 title.error = Fehler
 title.client.logs = Client Logs
