--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -865,8 +865,10 @@ title.add.new.group = Add new group
 title.add.search.service = Add search service
 title.add.to.roster = Add to roster
 title.address = Address
+title.advanced.connection.sso = Using Single Sign-On (SSO)
 title.advanced.connection.usesso = Use Single Sign-On (SSO) via GSSAPI
 title.advanced.connection.sso.account = This will use the Desktop Account for "{0}" to login to the server.
+title.advanced.connection.sso.unable = Unable to connect using Single Sign-On. Please check your principal and server settings.
 title.alert = Alert
 title.appearance = Appearance
 title.appearance.preferences = Customization
