SPARK-1334 added stun server configuration to media preferences. please check if it's an acceptable solution
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12407 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -938,4 +938,9 @@ privacy.name.for.default.list = Standard
 privacy.button.no.list.selected = Keine list ausgewählt
 privacy.menuitem.deactivate.current.list = {0} deaktivieren
 
+##Stunfallback in media settings
+stun.border.label = STUN Ausweichserver
+stun.server.addr = Stun Server:
+stun.server.port = Stun Port:
+
 #!#
