--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -1046,4 +1046,12 @@ privacy.status.menu.entry = Privacy Lists
 privacy.name.for.default.list = Default
 privacy.button.no.list.selected = No list selected
 privacy.menuitem.deactivate.current.list = Deactivate {0}
+
+
+##Stunfallback in media settings
+stun.border.label = STUN fallback server
+stun.server.addr = Stun Server:
+stun.server.port = Stun Port:
+
+
 #!#
