SPARK-1304, after a week of using, seems to work fine patch by M.Carasel
SPARK-LANG
updated localization
checkbox.conference.tab.setting = Show conference service in tab (requires restart)


git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12413 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -357,6 +357,7 @@ checkbox.use.krb.dns = Use DNS
 checkbox.use.specify.below = Specify below
 checkbox.use.pki.authentication = Use PKI authentication
 checkbox.transport.tab.setting = Show available transports in tab (requires restart)
+checkbox.conference.tab.setting = Show conference service in tab (requires restart)
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
