--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -237,6 +237,7 @@ checkbox.use.krb.dns = Verwende DNS
 checkbox.use.specify.below = Specify Below
 checkbox.use.pki.authentication = Verwende PKI Authentifizierung
 checkbox.transport.tab.setting = Zeige verfügbare Transports in einem Tab an (benötigt Neustart von Spark)
+checkbox.conference.tab.setting = Zeige den Konferenzreiter (benötigt Neustart von Spark)
 label.user.on.public.network = Teilnehmer befindet sich in einem öffentlichen Netzwerk
 label.change.password.to = &Neues Passwort eingeben
 label.username = &Benutzername
