fixed typo in english roar
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12416 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/roar/src/resources/i18n/roar_i18n.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n.properties
@@ -4,7 +4,7 @@
 roar.settings = Roar Settings
 roar.enabled = Popups enabled
 roar.duration = Duration in ms:
-roar.amout = Maximum Popups on Screen (0=infinity):
+roar.amount = Maximum Popups on Screen (0=infinity):
 roar.location = Change popup starting location (requires restart)
 roar.display.topright = Top Right
 roar.display.bottomright = Bottom Right
