--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -329,6 +329,7 @@ checkbox.use.krb.dns = Naudoti sri\u010di\u0173 vard\u0173 server\u012f (DNS)
 checkbox.use.specify.below = Apib\u016bdinimas \u017eemiau
 checkbox.use.pki.authentication = &PKI autentifikavimo naudojimas
 checkbox.transport.tab.setting = Rodyti prieinamus ry\u0161io kanalus kortel\u0117je (reikalingas perkrovimas)
+checkbox.conference.tab.setting = Rodyti grupini\u0173 pokalbi\u0173 tarnyb\u0105 kortel\u0117je (reikalingas perkrovimas)
 
 delete.log.permanently = Visi\u0161kas \u017eurnalo pa\u0161alinimas
 delete.permanently = Galutinai pa\u0161alinti?
@@ -837,6 +838,7 @@ title.add.to.roster = \u012etraukti \u012f s\u0105ra\u0161\u0105
 title.address = Adresas
 title.advanced.connection.usesso = Naudoti Single Sign-On (SSO) via GSSAPI
 title.advanced.connection.sso.account = Prisijungimui prie serverio bus panaudota vartotojo paskyra "{0}"
+title.advanced.connection.sso.unable = Nepavyko prisijungti naudojant Single Sign-On. Pra\u0161ome patikrinti prisijungimo duomenis ir serverio nustatymus.
 title.alert = Prane\u0161imas
 title.appearance = I\u0161vaizda
 title.appearance.preferences = Adaptavimas
@@ -1012,6 +1014,12 @@ privacy.dialog.add.list = Pra\u0161me nurodyti s\u0105ra\u0161o vard\u0105
 privacy.dialog.rem.list = Ar tikrai norite i\u0161trinti {0}?
 privacy.status.menu.entry = Privatumo s\u0105ra\u0161ai
 privacy.name.for.default.list = Numatytasis
+privacy.button.no.list.selected = Nepasirinktas s\u0105ra\u0161as
+privacy.menuitem.deactivate.current.list = Deaktyvuoti {0}
 
+##Stunfallback in media settings
+stun.border.label = STUN pagalbinis serveris
+stun.server.addr = Stun serveris:
+stun.server.port = Stun prievadas:
 
 #!#
