SPARK-1332 title.advanced.connection.sso.noprincipal = Spark is unable to find the principal to use for Single Sign-On. This will prevent SSO from working. title.login.no.account = Unable to determine
removed unnecessary system.out's


git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12422 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -870,6 +870,7 @@ title.advanced.connection.sso = Using Single Sign-On (SSO)
 title.advanced.connection.usesso = Use Single Sign-On (SSO) via GSSAPI
 title.advanced.connection.sso.account = This will use the Desktop Account for "{0}" to login to the server.
 title.advanced.connection.sso.unable = Unable to connect using Single Sign-On. Please check your principal and server settings.
+title.advanced.connection.sso.noprincipal = Spark is unable to find the principal to use for Single Sign-On. This will prevent SSO from working.
 title.alert = Alert
 title.appearance = Appearance
 title.appearance.preferences = Customization
@@ -939,6 +940,7 @@ title.last.activity = Last activity
 title.login = Login
 title.login.error = Login error
 title.login.settings = Login settings
+title.login.no.account = Unable to determine
 title.lookup.profile = Lookup profile
 title.msn.registration = MSN account credentials
 title.name = Name
