--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -546,6 +546,7 @@ title.advanced.connection.sso = Verwende Single Sign-On (SSO)
 title.advanced.connection.usesso = Verwende Single Sign-On (SSO) über GSSAPI
 title.advanced.connection.sso.account = Den Desktopaccount "{0}" benutzen um mit dem Server zu verbinden.
 title.advanced.connection.sso.unable = Single Sign-On fehlgeschlagen. Bitte die Einstellungen überprüfen.
+title.advanced.connection.sso.noprincipal = Spark kann den Klienten für Single Sign-On nicht finden.
 title.preferences = Einstellungen
 title.error = Fehler
 title.client.logs = Client Logs
@@ -627,6 +628,7 @@ title.lookup.profile = Profil suchen
 title.add.search.service = Such-Service hinzufügen
 title.person.search = Suche nach Personen
 title.login.settings = Login Einstellungen
+title.login.no.account = Unbestimmbar
 title.login = Login
 title.downloading.im.client = Download IM Programm
 title.upgrading.client = Programm upgraden
